--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./assets/files/Resume.pdf" target="_blank" data-pagename="navbar-help" data-name="navbar-help" name="navbar-help">Help</a>
+        <a class="nav-link" href="https://github.com/imannorouzi/toy-robot-angular" target="_blank" data-pagename="navbar-help" data-name="navbar-help" name="navbar-help">ReadMe in GitHub</a>
       </li>
     </ul>
   </div>
