--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,17 @@
-<footer class="footer p-4">
+<footer class="footer p-2">
   <div class="container">
-      <ul class="footer-links" >
-        <li><a href="./assets/files/Toy-Robot-Code-Challenge-2020.pdf" target="_blank" data-pagename="footer-test-description" data-name="footer-test-description" name="footer-test-description" ><i class="fa fa-info-circle"></i> What's This?</a></li>
-        <li><a href="https://www.linkedin.com/in/imannorouzi/" target="_blank" data-pagename="footer-link-to-linkedIn" data-name="footer-linedIn" name="footer-linedIn"><i class="fa fa-linkedin-square"></i> My LinkedIn page</a></li>
-        <li><a href="https://github.com/imannorouzi" target="_blank" data-pagename="footer-link-to-github-page" data-name="footer-link-to-my-github" name="footer-github" ><i class="fa fa-github-square"></i> My Github</a></li>
-        <li><a href="./assets/files/Resume.pdf" target="_blank" data-pagename="footer-link-to-resume" data-name="footer-link-to-resume" name="footer-resume"><i class="fa fa-user-circle"></i> My Resume</a></li>
-      </ul>
+      <div class="row">
+          <ul class="footer-links col-md-6" >
+              <li><a href="./assets/files/Toy-Robot-Code-Challenge-2020.pdf" target="_blank" data-pagename="footer-test-description" data-name="footer-test-description" name="footer-test-description" ><i class="fa fa-info-circle"></i> Help</a></li>
+              <li><a href="https://www.linkedin.com/in/imannorouzi/" target="_blank" data-pagename="footer-link-to-linkedIn" data-name="footer-linedIn" title="linkedIn" name="footer-linedIn"><i class="fa fa-linkedin-square"></i> LinedIn</a></li>
+              <li><a href="https://github.com/imannorouzi" target="_blank" data-pagename="footer-link-to-github-page" data-name="footer-link-to-my-github" title="github" name="footer-github" ><i class="fa fa-github-square"></i> Github</a></li>
+              <li><a href="./assets/files/Resume.pdf" target="_blank" data-pagename="footer-link-to-resume" data-name="footer-link-to-resume" title="Iman Norouzi's reume" name="footer-resume"><i class="fa fa-user-circle"></i> Resume</a></li>
+          </ul>
 
-      <div class="">
-        <p class="text-right">This is all open source <i class="fa fa-copyright fa-rotate-180"></i>, so, feel free to copy.</p>
+          <div class="col-md-6 text-right">
+              <small class=""> Feel free to copy. <i class="fa fa-copyright fa-rotate-180"></i></small>
+          </div>
       </div>
+
   </div>
 </footer>
