--- a/src/app/robot-borad/robot-board.component.html
+++ b/src/app/robot-borad/robot-board.component.html
@@ -1,8 +1,8 @@
-<p>Click any position to place the Robot.</p>
+<p>Click any position to start.</p>
 <table class="board smooth">
   <tbody>
   <tr *ngFor="let r of [].constructor(rows); let row=index;">
-    <td (click)="place(col,  rows - row - 1)" class="smooth" *ngFor="let c of [].constructor(cols); let col=index;">
+    <td tabindex=0 (keydown.space)="place(col,  rows - row - 1)" (click)="place(col,  rows - row - 1)" class="smooth" *ngFor="let c of [].constructor(cols); let col=index;">
       <div *ngIf="robot &&
       robot.isRobotPlaced() &&
       (robot.x-1 === col) &&
